better CGU display in registration form

--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -102,11 +102,6 @@
 
     .form-check {
         padding-left: 0;
-
-        label {
-            color: white;
-            text-shadow: 0 1px 0 black;
-        }
     }
 }
 
@@ -184,6 +179,15 @@
     width: 97%;
 }
 
+.form-group-cgu {
+    label {
+        background-color: theme-color-level('kblue-typo');
+        border-radius: 25px;
+        color: $light;
+        padding: 10px;
+    }
+}
+
 .form-control {
     border-color: theme-color-level('kblue-typo');
     color: theme-color-level('kblue-typo');
@@ -220,14 +224,18 @@ input[type="checkbox"].demo2 {
 }
 
 input[type="checkbox"].demo2 + label::before {
+    border: 2px solid $light;
+    border-radius: 20%;
+    color: transparent;
+    content:'X';
     cursor: pointer;
-    content:'';
-    border: 1px solid theme-color-level('kblue-typo');
-    padding: 0 0.6rem;
-    margin-right: 0.3rem;
+    font-weight: bold;
+    padding: 2px 6px;
+    margin-right: 0.6rem;
 }
 
 input[type="checkbox"].demo2:checked + label::before {
     cursor: pointer;
-    background-color: theme-color-level('kblue-typo');
+    color: $light;
+    content:'X';
 }
