--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -57,7 +57,7 @@
                                      alt="photo par défaut du challenge" class="w-100 challenge-photo-container">
                             {% endif %}
                             <div class="white-circle-img-goutte"></div>
-                            <img class="img-goutte" src={{ asset(sportGoutte) }}>
+                            <img class="img-goutte-index" src={{ asset(sportGoutte) }}>
                         </div>
                         <div class="card-body p-2">
                             <h3 class="card-title h6 text-center text-uppercase">{{ challenge.title }}</h3>
