--- a/templates/challenge/new.html.twig
+++ b/templates/challenge/new.html.twig
@@ -7,6 +7,10 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 {% endblock %}
 
+{% block background %}
+    class="background-profile" style="background: url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}') no-repeat fixed center; background-size: cover;"
+{% endblock %}
+
 {% block body %}
     <header class="arrow-header my-3 text-uppercase">
         <h1 class="mt-2">Créez votre challenge sportif</h1>
