--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -56,7 +56,7 @@
                 {{ form_errors(registrationForm.postalCode) }}
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group form-group-cgu">
             {{ form_row(registrationForm.agreeTerms) }}
             {{ form_errors(registrationForm.agreeTerms) }}
         </div>
