--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -17,6 +17,7 @@ $drawer-menu: #111;
 $black: #111;
 $transparent-black: #1118;
 $light: #fff;
+$transparent-light: #fff8;
 
 $pagination-active-bg: $black;
 $pagination-color: $black;
