--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -99,9 +99,9 @@
         <h2 class="mt-5">{{ form_label(form.favoriteSports) }}</h2>
         <div class="form-check d-flex align-items-center pl-0 flex-row flex-wrap justify-content-center background-grey w-100">
             {% for category in categories %}
-                <div class="d-flex flex-column align-items-center w-75 mt-5">
+                <div class="d-flex flex-column align-items-center w-100 mt-5">
                     <h3 style="color: {{ category.color }}"><img src="/uploads/logo/{{ category.logo }}" class="home-carousel-logo"> Univers {{ category.name }}</h3>
-                    <div class="d-flex flex-md-row justify-content-center align-items-center w-100">
+                    <div class="d-flex flex-wrap justify-content-center align-items-center w-100">
                         {% for sport in form.favoriteSports.children %}
                             {% if sport.vars.attr['category'].id == category.id %}
                                 <div class="favorite-sport-container d-flex flex-column align-items-center form-group cursor-pointer py-2 m-1 {{ sport.vars.checked? "my-sport-check" : "" }}"
