--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% if app.user and not app.user.isVerified %}
             {{ include('component/_email-verified.html.twig') }}
         {% endif %}
+        {{ render_esi(path('ch_cookie_consent.show_if_cookie_consent_not_set', { 'locale' : 'fr' })) }}
         {% if sport is not defined and (challenge is defined) %}
             {% set sportLogo = challenge.sports|length>1 ? asset(multiSportLogo) : (challenge.sports|length==1 ? "/uploads/logo/"~challenge.sports['0'].logo : null) %}
             {% set sportColor = 'linear-gradient(to right, white 10%, #f29100, #e71374, #009eb5, #94c022)' %}
