--- a/templates/homeBase.html.twig
+++ b/templates/homeBase.html.twig
@@ -14,6 +14,7 @@
         {% if app.user and not app.user.isVerified %}
             {{ include('component/_email-verified.html.twig') }}
         {% endif %}
+        {{ render_esi(path('ch_cookie_consent.show_if_cookie_consent_not_set', { 'locale' : 'fr' })) }}
         {% for category, messages in app.flashes %}
             {% for message in messages %}
                 <div class="alert alert-{{ category }} email-flash-popup">
