Carrousel pictures and link corrected

--- a/templates/component/_home_main_carousel.html.twig
+++ b/templates/component/_home_main_carousel.html.twig
@@ -15,7 +15,7 @@
 </div>
 
 <div class="bloc-label-sport">
-    <div id="label-sport-carousel" class="my-carousel special-carousel nbimg:1 nbimg:sm2 nbimg:md3 nbimg:lg4 shift:-1 shift:sm:-1 shift:lg:-2">
+    <div id="label-sport-carousel" class="my-carousel special-carousel nbimg:1 nbimg:sm2 nbimg:md3 nbimg:lg4 shift:sm:-1 shift:lg:-2">
         <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-label-sport">
         <div class="slide-carousel">
             {% if imagesCarousel is defined %}
