--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -118,9 +118,12 @@ div[id="home-main-carousel"] {
         justify-content: center;
         align-items: center;
 
-        a {
-            width: 100%;
+        @include xxl {
+            a {
+                width: 100%;
+            }
         }
+
 
         .image-home-carousel {
             display: block;
