--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -105,6 +105,10 @@
     }
 }
 
+.top-20-vh {
+    margin-top: 20vh;
+}
+
 .lisible-text {
     background-color: $transparent-black;
     border-radius: 20px;
