--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,7 +10,7 @@
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <div class="container">
+    <div class="container top-20-vh">
         {{ form_start(registrationForm, {'attr': {'class': 'form-kyosc'} }) }}
         <header class="arrow-header my-3 text-uppercase">
             <h1 class="mt-2">Inscription</h1>
