--- a/assets/styles/arrow.scss
+++ b/assets/styles/arrow.scss
@@ -21,6 +21,7 @@
     background-color: $light;
     border-radius: 10px;
     margin: auto;
-    max-width: 350px;
+    max-width: 400px;
+    padding: 5px 20px;
 }
 
