--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -99,7 +99,7 @@
         <h2 class="mt-5">{{ form_label(form.favoriteSports) }}</h2>
         <div class="form-check d-flex align-items-center pl-0 flex-row flex-wrap justify-content-center background-grey w-100">
             {% for category in categories %}
-                <div class="d-flex flex-column align-items-center w-100 mt-5">
+                <div class="d-flex flex-column align-items-center w-100 mt-2 mx-5 pt-2 transparent-background-dark">
                     <h3 style="color: {{ category.color }}"><img src="/uploads/logo/{{ category.logo }}" class="home-carousel-logo"> Univers {{ category.name }}</h3>
                     <div class="d-flex flex-wrap justify-content-center align-items-center w-100">
                         {% for sport in form.favoriteSports.children %}
