--- a/assets/styles/cookie_consent.scss
+++ b/assets/styles/cookie_consent.scss
@@ -171,3 +171,9 @@
 .ch-cookie-consent__toggle-details-show {
     cursor: pointer;
 }
+
+.ch-cookie-consent__btn-group{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
