--- a/assets/styles/cookie_consent.scss
+++ b/assets/styles/cookie_consent.scss
@@ -2,10 +2,12 @@
 
 .ch-cookie-consent {
     background-color: $light;
+    border-radius: 30px;
     color: $black;
-    width: 100%;
+    margin: 5% 10%;
+    padding: 25px 30px;
+    width: 80%;
     z-index: 99999;
-    padding: 35px 40px;
 }
 
 .ch-cookie-consent__title {
@@ -106,18 +108,29 @@
 }
 
 .ch-cookie-consent__btn {
-    margin-top: 25px;
+    margin-top: 10px;
     width: 200px;
-    background: linear-gradient(349.19deg, theme-color-level('kgreen') 0%, theme-color-level('kblue') 100%);
-    color: $light;
+    background: theme-color-level('kgreen');
+    color: $black;
     font-weight: bold;
     padding: 10px 20px;
-    display: -ms-flexbox;
-    display: flex;
     margin-left: auto;
     text-align: center;
     border-radius: 6px;
-    box-shadow: 0 26px 10px -21px rgba(0, 0, 0, 0.28);
+    box-shadow: 1px 1px 10px 2px $transparent-light;
+}
+
+#cookie_consent_use_only_functional_cookies {
+    background: theme-color-level('kred');
+}
+
+#cookie_consent_save {
+    display: none;
+    background: theme-color-level('korange');
+}
+
+.ch-cookie-consent__btn:hover {
+    color: $light;
 }
 
 .ch-cookie-consent--dark-theme {
@@ -146,9 +159,9 @@
 
 .ch-cookie-consent--dark-theme .ch-cookie-consent__category-toggle input:checked+label,
 .ch-cookie-consent--dark-theme .ch-cookie-consent__category-toggle input+label:hover {
-    background-color: $light;
-    color: $black;
-    border-color: $black;
+    background-color: theme-color-level('kgreen');
+    color: $light;
+    border-color: $light;
 }
 
 .ch-cookie-consent--dark-theme .ch-cookie-consent__category-toggle input:checked+label {
@@ -173,7 +186,12 @@
 }
 
 .ch-cookie-consent__btn-group{
-    display: flex;
-    justify-content: space-around;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    @include md {
+        flex-direction: row;
+    }
 }
