--- a/templates/bundles/CHCookieConsentBundle/cookie_consent.html.twig
+++ b/templates/bundles/CHCookieConsentBundle/cookie_consent.html.twig
@@ -1,8 +1,8 @@
 {% form_theme form '@CHCookieConsent/form/cookie_consent_theme.html.twig' %}
 
-{% block script %}
-    <script type="text/javascript" src="{{ asset('bundles/chcookieconsent/js/cookie_consent.js') }}"></script>
-{% endblock %}
+{#{% block script %}#}
+{#    <script type="text/javascript" src="{{ asset('bundles/chcookieconsent/js/cookie_consent.js') }}"></script>#}
+{#{% endblock %}#}
 
 <div class="ch-cookie-consent ch-cookie-consent--{{ theme }}-theme ch-cookie-consent--{{ position }}">
     {% block title %}
@@ -14,7 +14,7 @@
     {% endblock %}
 
     {% block read_more %}
-        <a class="ch-cookie-consent__read-more" href="{% block read_more_link %}/privacy-statement{% endblock %}">{{ 'ch_cookie_consent.read_more'|trans({}, 'CHCookieConsentBundle') }}</a>
+        <a class="ch-cookie-consent__read-more" href="{{ path("about_cookies") }}">{{ 'ch_cookie_consent.read_more'|trans({}, 'CHCookieConsentBundle') }}</a>
     {% endblock %}
 
     {{ form_start(form, {'attr': {'class': 'ch-cookie-consent__form'}}) }}
@@ -28,14 +28,12 @@
 
     <div class="ch-cookie-consent__btn-group">
         {{ form_rest(form) }}
-        {% if simplified %}
-            {% block toggle_details %}
-                <div class="ch-cookie-consent__toggle-details">
-                    <span class="ch-cookie-consent__toggle-details-show">{{ 'ch_cookie_consent.show_details'|trans({}, 'CHCookieConsentBundle') }}</span>
-                    <span class="ch-cookie-consent__toggle-details-hide">{{ 'ch_cookie_consent.hide_details'|trans({}, 'CHCookieConsentBundle') }}</span>
-                </div>
-            {% endblock %}
-        {% endif %}
+        {% block toggle_details %}
+            <div class="ch-cookie-consent__toggle-details">
+                <span class="ch-cookie-consent__toggle-details-show">{{ 'ch_cookie_consent.show_details'|trans({}, 'CHCookieConsentBundle') }}</span>
+                <span class="ch-cookie-consent__toggle-details-hide">{{ 'ch_cookie_consent.hide_details'|trans({}, 'CHCookieConsentBundle') }}</span>
+            </div>
+        {% endblock %}
     </div>
     {{ form_end(form) }}
 </div>
