add display none in cookie.scss to complex choice for now

--- a/assets/styles/cookie_consent.scss
+++ b/assets/styles/cookie_consent.scss
@@ -187,6 +187,8 @@
 
 .ch-cookie-consent__toggle-details-show {
     cursor: pointer;
+    //Remove the display none here to enable cookie individual preference save
+    display: none;
 }
 
 .ch-cookie-consent__btn-group{
