about us page and route OK

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -31,7 +31,7 @@
         <div class="home-choice hide-before-scroll show-on-scroll">
             <h2>Connaitre KYOSC</h2>
             <img src="{{ asset('build/images/picto/ketoile.png') }}" class="home-choice-picto">
-            <a href="#">En savoir plus</a>
+            <a href="{{ path('about_us') }}">En savoir plus</a>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
