--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -37,19 +37,19 @@
         <div class="home-choice hide-before-scroll show-on-scroll">
             <h2>Parcourir KYOSC</h2>
             <img src="{{ asset('build/images/picto/komplice.png') }}" class="home-choice-picto">
-            <a href="#">En savoir plus</a>
+            <a href="{{ path('about_kyosc') }}">En savoir plus</a>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
             <h2>Créer un challenge</h2>
             <img src="{{ asset('build/images/picto/kequipe.png') }}" class="home-choice-picto">
-            <a href="#">En savoir plus</a>
+            <a href="{{ path('about_challenge') }}">En savoir plus</a>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
             <h2>Gagner de l'experience</h2>
             <img src="{{ asset('build/images/picto/kblason.png') }}" class="home-choice-picto">
-            <a href="#">En savoir plus</a>
+            <a href="{{ path('gamification') }}">En savoir plus</a>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
     </section>
