--- a/templates/about/gamification.html.twig
+++ b/templates/about/gamification.html.twig
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="arrow-header">A propos de KYOSC</h1>
+    <h1 class="arrow-header">A propos de notre gamification</h1>
 {% endblock %}
