--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -7,6 +7,7 @@
     <hr>
     <div class="footer-container footer-lower">
         <a href="#">Mentions légales</a>
+        <a href="{{ path('about_cookies') }}">Cookies</a>
     </div>
     <div class="dropup show dropdown-container">
         <a class="dropdown-toggle" href="#" role="button" id="footerDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
