route, footer-link and view created for CGU

--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -6,7 +6,7 @@
     </div>
     <hr>
     <div class="footer-container footer-lower">
-        <a href="#">Mentions légales</a>
+        <a href="{{ path('cgu') }}">Mentions légales</a>
         <a href="{{ path('about_cookies') }}">Cookies</a>
     </div>
     <div class="dropup show dropdown-container">
