--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer-container footer-upper">
-        <a href="#">A propos de KYOSC</a>
-        <a href="#">FAQ</a>
+        <a href="{{ path('about_us') }}">A propos de KYOSC</a>
+        <a href="{{ path('faq') }}">FAQ</a>
         <a href="mailto:contact@kyosc.com">Nous contacter</a>
     </div>
     <hr>
@@ -9,11 +9,11 @@
         <a href="{{ path('cgu') }}">Mentions légales</a>
         <a href="{{ path('about_cookies') }}">Cookies</a>
     </div>
-    <div class="dropup show dropdown-container">
-        <a class="dropdown-toggle" href="#" role="button" id="footerDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Langues
+    <div class="dropdown-flag-container">
+        <a class="footer-flag-dropdown">
+            Langues △
         </a>
-        <div class="dropdown-menu flag-choice-dropdown" aria-labelledby="footerDropdown">
+        <div class="flag-choice-dropdown flag-hide">
             <a class="dropdown-item" href="#"><img src="{{ asset('build/images/flag/flagFR.png') }}" class="flag-logo">Fr</a>
             <a class="dropdown-item" href="#"><img src="{{ asset('build/images/flag/flagEN.png') }}" class="flag-logo">En</a>
         </div>
