better h3, with better margin in CGU

--- a/assets/styles/about.scss
+++ b/assets/styles/about.scss
@@ -48,4 +48,10 @@
     h1, h2, h3 {
         text-align: center;
     }
+
+    h3 {
+        font-size: 1.3em;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
 }
