--- a/templates/about/cgu.html.twig
+++ b/templates/about/cgu.html.twig
@@ -11,7 +11,7 @@
             <br>
             Avant de vous inscrire comme membre, merci de consulter les conditions générales d’utilisation de KYOSC qui suivent :
         </p>
-       <h2 class="hide-before-scroll show-on-scroll">1. Accès au service</h2>
+       <h2 class="hide-before-scroll show-on-scroll mt-3">1. Accès au service</h2>
         <p class="about-text hide-before-scroll show-on-scroll">
             Pour accéder au site et utiliser ses différents services, l’utilisateur doit créer un compte de «Membre » en suivant les étapes du formulaire d’inscription. Pour pouvoir s’inscrire et bénéficier des services de KYOSC, l’utilisateur doit lire et accepter les présentes conditions générales d’utilisation. Si le visiteur n'accepte pas les conditions d'utilisation de la plateforme, il ne pourra pas l'utiliser. L’utilisateur est informé que la création d’un compte sur KYOSC constitue une collecte de données personnelles et accepte cette collecte. Si l’utilisateur s’oppose à la collecte de données personnelles, il ne doit pas créer de compte.
         </p>
