--- a/templates/clan/_form.html.twig
+++ b/templates/clan/_form.html.twig
@@ -1,4 +1,47 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<header class="arrow-header my-3 text-uppercase">
+    <h1 class="mt-2">Créez votre clan</h1>
+</header>
+<div class="container">
+    <div class="form-group">
+        <p> Les champs avec * sont obligatoires.</p>
+    </div>
+    {{ form_start(form, {'attr': {'class': 'form-kyosc'} }) }}
+    <div class="form-row">
+        <div class="form-group col-md-12 ">
+            <p class="mb-0 mandatory">*</p>
+            {{ form_errors(form.name) }}
+            {{ form_widget(form.name) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-lg-12">
+            <p class="mb-0 mandatory">*</p>
+            {{ form_errors(form.description, {'attr': {'size': 8} }) }}
+            {{ form_widget(form.description) }}
+            {{ form_help(form.description) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="fileUpload col-lg-6 align-self-end">
+            {{ form_errors(form.logoFile) }}
+            {{ form_widget(form.logoFile) }}
+            {{ form_help(form.logoFile) }}
+        </div>
+        <div class="fileUpload col-lg-6 align-self-end">
+            {{ form_errors(form.bannerFile) }}
+            {{ form_widget(form.bannerFile) }}
+            {{ form_help(form.bannerFile) }}
+        </div>
+    </div>
+    <div class="form-row justify-content-between">
+        <div class="form-group">
+            {{ form_errors(form.isPublic) }}
+            {{ form_widget(form.isPublic) }}
+            {{ form_help(form.isPublic) }}
+        </div>
+    </div>
+    <div class="d-flex justify-content-center mt-4">
+        <button type="submit" class="btn-login btn btn-lg">Créer mon clan</button>
+        {{ form_end(form) }}
+    </div>
+</div>
