--- a/templates/clan/new.html.twig
+++ b/templates/clan/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Clan{% endblock %}
+{% block title %}Nouveau clan{% endblock %}
+
+{% block background %}
+    class="background-profile" style="background: url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}') no-repeat fixed center; background-size: cover;"
+{% endblock %}
 
 {% block body %}
-    <h1>Create new Clan</h1>
 
     {{ include('clan/_form.html.twig') }}
 
-    <a href="{{ path('clan_index') }}">back to list</a>
 {% endblock %}
