conflict in js load order (cookies vs bootstrap) resolved. Modal open along with cookie consent

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,8 @@
         {% endfor %}
         {% block body %}{% endblock %}
         {{ include('component/_footer.html.twig') }}
+        {{ encore_entry_script_tags('cookies') }}
+        {{ encore_entry_script_tags('cookie_consent') }}
         {{ encore_entry_script_tags('app') }}
         {% block javascripts %}{% endblock %}
     </body>
