--- a/templates/clan/new.html.twig
+++ b/templates/clan/new.html.twig
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block body %}
-
+    <header class="arrow-header my-3 text-uppercase">
+        <h1 class="mt-2">Créez votre clan</h1>
+    </header>
     {{ include('clan/_form.html.twig') }}
-
 {% endblock %}
