--- a/templates/clan/_form.html.twig
+++ b/templates/clan/_form.html.twig
@@ -1,7 +1,4 @@
-<header class="arrow-header my-3 text-uppercase">
-    <h1 class="mt-2">Créez votre clan</h1>
-</header>
-<div class="container">
+<div class="container top-20-vh">
     <div class="form-group">
         <p> Les champs avec * sont obligatoires.</p>
     </div>
@@ -34,14 +31,14 @@
         </div>
     </div>
     <div class="form-row justify-content-between">
-        <div class="form-group">
+        <div class="form-group ">
             {{ form_errors(form.isPublic) }}
             {{ form_widget(form.isPublic) }}
             {{ form_help(form.isPublic) }}
         </div>
     </div>
     <div class="d-flex justify-content-center mt-4">
-        <button type="submit" class="btn-login btn btn-lg">Créer mon clan</button>
+        <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
         {{ form_end(form) }}
     </div>
 </div>
