--- a/templates/clan/edit.html.twig
+++ b/templates/clan/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Clan{% endblock %}
+{% block title %}Modifiez votre clan{% endblock %}
+
+{% block background %}
+    class="background-profile" style="background: url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}') no-repeat fixed center; background-size: cover;"
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Clan</h1>
-
-    {{ include('clan/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('clan_index') }}">back to list</a>
+    <header class="arrow-header my-3 text-uppercase">
+        <h1 class="mt-2">Modifiez votre clan</h1>
+    </header>
+    {{ include('clan/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
     {{ include('clan/_delete_form.html.twig') }}
 {% endblock %}
